--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,7 +1,6 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Tahoma, Verdana, sans-serif;
   font-size: 16px;
-  line-height: 1;
 }
 
 textarea{
@@ -21,21 +20,10 @@ textarea{
   border-bottom: 8px solid black;
 }
 
-.time-block{
-  text-align: center;
-  border-radius: 15px;
-}
-
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;;
-}
-
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
 }
 
 .past {
@@ -61,7 +49,3 @@ textarea{
   color: white;
 }
 
-.save-delete i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
-}
